--- a/public/styles/scss/generale.scss
+++ b/public/styles/scss/generale.scss
@@ -22,6 +22,7 @@ body {
         position: absolute;
         z-index: +5;
         top: 30vh;
+        left: 40vh;
         display: flex;
         justify-content: center;
         color: white;
