--- a/templates/layout/layout.html.twig
+++ b/templates/layout/layout.html.twig
@@ -70,6 +70,8 @@
 			{% for message in messages %}
 				<div class="flash alert  flash-{{type}}">
 					<p>{{ message }}</p>
+
+					<button class="flash-btn" onclick>Ok</button>
 				</div>
 
 			{% endfor %}
@@ -106,5 +108,16 @@
 				
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+		<script>
+		let flash = document.getElementsByClassName("flash-btn");
+
+		function vanishFlash() {
+			this.classList.add("hide");
+		}
+		
+		for (i = 0; i<flash.lenght; i++) {
+		document.getElementsByClassName("flash-btn")[i].addEventListener("click", vanishFlash);
+		}
+		</script>
 	</body>
 </html>
