--- a/templates/admin/gerer-admins.html.twig
+++ b/templates/admin/gerer-admins.html.twig
@@ -1,6 +1,6 @@
 {% extends "layout/layout.html.twig" %}
 
-{% block title %}Toutes les assos partenaires
+{% block title %}Tous les admins
 {% endblock %}
 
 {% block css %}
